# StarCraft-II-Data-Helper

./: .gitignore  CMakeLists.txt  README.md
resources/: app_icon.rc  catalog_link_schema.tsv  resources.qrc
resources/config/: rules.json  whitelist.json
resources/styles/: dark.qss
resources/styles/dark/: 00_foundation.qss  10_controls.qss  20_workspace.qss  30_dialogs.qss  40_optimization.qss  50_progress.qss
scripts/: validate_sc2_catalogs.py
src/: main.cpp
src/app/: AudioManager.cpp  AudioManager.h  MainWindow.cpp  MainWindow.h  MainWindowAnalysisController.cpp  MainWindowAnalysisController.h  MainWindowSettings.cpp  MainWindowSettings.h  MainWindowStartup.cpp  MainWindowStartup.h  MainWindowUiBuilder.cpp  MainWindowUiBuilder.h  MainWindowUiSupport.cpp  MainWindowUiSupport.h  ModalBackdrop.cpp  ModalBackdrop.h  OptimizationWizardController.cpp  OptimizationWizardController.h  Sc2FileDialogs.cpp  Sc2FileDialogs.h  Sc2MessageDialog.cpp  Sc2MessageDialog.h  SourceSelectionController.cpp  SourceSelectionController.h  ThemeManager.cpp  ThemeManager.h
src/core/: AnalysisModels.cpp  AnalysisModels.h  ArchiveReferenceRewriter.cpp  ArchiveReferenceRewriter.h  BackupManager.cpp  BackupManager.h  CatalogEnumRepair.cpp  CatalogEnumRepair.h  CatalogLinkSchema.cpp  CatalogLinkSchema.h  CatalogProtection.h  ConfigManager.cpp  ConfigManager.h  DataCollectionAliasMapper.cpp  DataCollectionAliasMapper.h  DataCollectionPreservation.cpp  DataCollectionPreservation.h  DataCollectionUnitBuilder.cpp  DataCollectionUnitBuilder.h  DataNode.h  DeepCleanupService.cpp  DeepCleanupService.h  DuplicateFinder.cpp  DuplicateFinder.h  FolderAnalyzer.cpp  FolderAnalyzer.h  MergeService.cpp  MergeService.h  ReferenceGraph.cpp  ReferenceGraph.h  ReferenceRenamer.cpp  ReferenceRenamer.h  Sc2Archive.cpp  Sc2Archive.h  StandardNamePlanner.cpp  StandardNamePlanner.h  UnitFamilyDetector.cpp  UnitFamilyDetector.h  UnusedFinder.cpp  UnusedFinder.h  (+4 more)
src/tools/: DataCollectionProbe.cpp  OptimizeFolder.cpp  OptimizeMaps.cpp  RepairMapEnums.cpp
src/ui/: AnalysisProgressDialog.cpp  AnalysisProgressDialog.h  DataCollectionPage.cpp  DataCollectionPage.h  DependenciesPage.cpp  DependenciesPage.h  DuplicatesPage.cpp  DuplicatesPage.h  FormatterPage.cpp  FormatterPage.h  GraphPage.cpp  GraphPage.h  LogPanel.cpp  LogPanel.h  ObjectFilterProxyModel.cpp  ObjectFilterProxyModel.h  ObjectInspectorWidget.cpp  ObjectInspectorWidget.h  ObjectTableModel.cpp  ObjectTableModel.h  OverviewPage.cpp  OverviewPage.h  PropertiesPage.cpp  PropertiesPage.h  RenameIdsPage.cpp  RenameIdsPage.h  UnusedPage.cpp  UnusedPage.h  XmlSourcePage.cpp  XmlSourcePage.h
tests/: test_core.cpp
